...
            app:layout_constraintDimensionRatio=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bw_poster"
            app:srcCompat="@drawable/back_arrow" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_actors_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast" />

        <TextView
...
